# datatalent_docs

./: .gitignore  doc_exploration_geo.md
_docs/: brainstorm-roadmap.md  brief.md  notes-projet.md  structure-repo.md  user-stories-datatalent.md
_onboarding/: onboarding-dbt-ressources.md  onboarding-gcp-datatalent.md  onboarding-pre-commit.md  onboarding-pyproject.md  onboarding-ruff.md  onboarding-uv.md
architecture/: architecture-datatalent-details.md  architecture-datatalent.mermaid  couche-intermediate-datatalent.md
bi/: comparatif-solutions-bi.md
code-reviews/docs/cr_geo/: _issues_and_fixes.md  _suggestions-tests-happy-path.md  geo_v1.md  geo_v2.md  geo_v3.md  (+4 more)
code-reviews/ingestion/: main.py  pyproject.toml
code-reviews/ingestion/geo/: config.py  ingest.py
code-reviews/ingestion/shared/: bigquery.py  gcs.py  logging.py
code-reviews/ingestion/sirene/: config.py  ingest.py
code-reviews/ingestion/tests/: test_geo_ingest.py  test_shared.py  test_sirene_ingestion.py
exploration_sources/: doc_exploration_france_travail.md  exploration-sirene.md  exploration-sources.md
ingestion/: ingestion-france-travail.md  ingestion-shared.md  ingestion-sirene.md  setup-gcp-bloc1.md
ingestion/1-sources-originelles/: 1-0-contrat-interface.md  1-2-ingestion-geo.md
ingestion/2-sources-additionnelles/: 2-0-1-exploration-mcp-datagouv.md  2-0-2-croisement-mcp-x-france-travail.md  2-1-ingestion-urssaf-masse-salariale.md  2-2-ingestion-urssaf-effectifs.md  2-3-0-exploration-spike-bmo.md  2-3-1-ingestion-bmo.md
transformation-dbt/: deduplication-offres-france-travail.md
(+4 files in other folders)
