[project]
name = "datatalent-ingestion"
version = "0.1.0"
description = "Pipeline d'ingestion DataTalent — France Travail, Sirene, Géo"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "httpx>=0.27",
    "structlog>=25.5.0",
    "tenacity>=9.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
